mk/glink/lang/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Unused terminals:

    WRONGSTRING
    BINNUMBER
    HEXNUMBER
    MPROD
    QUESTION
    OR
    NOT
    DOUBLECOLON
    NEWLINE
    APPEND
    SEMI

Grammar

Rule 0     S' -> inblock
Rule 1     block -> LBRACE inblock RBRACE
Rule 2     inblock -> metaexpr
Rule 3     inblock -> inblock divider metaexpr
Rule 4     inblock -> divider inblock
Rule 5     inblock -> inblock divider
Rule 6     print -> PRINT expr
Rule 7     printl -> PRINTL expr
Rule 8     module -> MODULE WORD block
Rule 9     fn -> FN var LPAREN args RPAREN block
Rule 10    fn -> FN var LPAREN args RPAREN comms block
Rule 11    dict -> LBRACE declares RBRACE
Rule 12    dict -> LBRACE RBRACE
Rule 13    list -> LBRACKET comms RBRACKET
Rule 14    list -> LBRACKET RBRACKET
Rule 15    declares -> declare
Rule 16    declares -> declares COMMA declare
Rule 17    declare -> expr COLON expr
Rule 18    if -> IF LPAREN expr RPAREN expr
Rule 19    if -> IF LPAREN expr RPAREN expr ELSE expr
Rule 20    unless -> UNLESS LPAREN expr RPAREN expr
Rule 21    unless -> UNLESS LPAREN expr RPAREN expr ELSE expr
Rule 22    divider -> DIVIDER
Rule 23    input -> INPUT
Rule 24    define -> DEFINE var
Rule 25    define -> DEFINE var EQUALS expr
Rule 26    invoke -> var LPAREN args RPAREN block
Rule 27    invoke -> var LPAREN args RPAREN
Rule 28    invoke -> member LPAREN args RPAREN block
Rule 29    invoke -> member LPAREN args RPAREN
Rule 30    metaexpr -> expr
Rule 31    metaexpr -> fn
Rule 32    metaexpr -> module
Rule 33    metaexpr -> application
Rule 34    metaexpr -> downlevel
Rule 35    undervar -> AT undervar
Rule 36    undervar -> AT var
Rule 37    loop -> LOOP LPAREN RPAREN expr
Rule 38    millis -> MILLIS LPAREN RPAREN
Rule 39    break -> BREAK
Rule 40    None -> NONE
Rule 41    parttree -> AMPERSAND metaexpr
Rule 42    args -> <empty>
Rule 43    args -> comms
Rule 44    comms -> expr
Rule 45    comms -> comms COMMA expr
Rule 46    comms -> comms COMMA
Rule 47    equal -> expr EQUALS expr
Rule 48    and -> expr AND expr
Rule 49    application -> APPLICATION WORD block
Rule 50    isdir -> ISDIR LPAREN expr RPAREN
Rule 51    system -> SYSTEM LPAREN expr RPAREN
Rule 52    isexist -> ISEXIST LPAREN expr RPAREN
Rule 53    listdir -> LISTDIR LPAREN expr RPAREN
Rule 54    decode -> DECODE LPAREN expr RPAREN
Rule 55    regex -> REGEX LPAREN args RPAREN
Rule 56    relpath -> RELPATH LPAREN RPAREN
Rule 57    dirpath -> DIRPATH LPAREN RPAREN
Rule 58    filename -> FILENAME LPAREN RPAREN
Rule 59    makesystem -> MAKESYSTEM
Rule 60    expr -> expralg
Rule 61    expr -> boolop
Rule 62    expr -> parttree
Rule 63    expr -> alg0
Rule 64    expr -> print
Rule 65    expr -> loop
Rule 66    expr -> variables
Rule 67    expr -> python
Rule 68    expr -> execfile
Rule 69    expr -> break
Rule 70    expr -> equal
Rule 71    expr -> if
Rule 72    expr -> unless
Rule 73    expr -> subst
Rule 74    expr -> yield
Rule 75    expr -> pass
Rule 76    expr -> define
Rule 77    expr -> makesystem
Rule 78    expr -> printl
Rule 79    expr -> decode
Rule 80    expr -> and
Rule 81    expr -> regex
Rule 82    expr -> dict
Rule 83    expr -> Node
Rule 84    expr -> return
Rule 85    expr -> input
Rule 86    expralg -> term
Rule 87    expralg -> invoke
Rule 88    expralg -> element
Rule 89    expralg -> millis
Rule 90    expralg -> evaltree
Rule 91    expralg -> evalvar
Rule 92    expralg -> unvar
Rule 93    expralg -> slice
Rule 94    expralg -> listdir
Rule 95    expralg -> None
Rule 96    expralg -> relpath
Rule 97    expralg -> filename
Rule 98    expralg -> dirpath
Rule 99    expralg -> isdir
Rule 100   expralg -> system
Rule 101   expralg -> isexist
Rule 102   expralg -> block
Rule 103   expralg -> length
Rule 104   expralg -> list
Rule 105   return -> RETURN expr
Rule 106   term -> str
Rule 107   term -> float
Rule 108   term -> int
Rule 109   term -> var
Rule 110   term -> undervar
Rule 111   term -> member
Rule 112   int -> NUMBER
Rule 113   python -> PYTHON str
Rule 114   execfile -> EXECFILE expr
Rule 115   evalvar -> EVALVAR LPAREN expr RPAREN
Rule 116   unvar -> UNVAR LPAREN expr RPAREN
Rule 117   evaltree -> EVALTREE LPAREN expr RPAREN
Rule 118   slice -> SLICE LPAREN args RPAREN
Rule 119   subst -> SUBST expr
Rule 120   Node -> NODE LPAREN args RPAREN
Rule 121   boolop -> alg0 BOOLOP alg0
Rule 122   length -> LENGTH LPAREN expr RPAREN
Rule 123   downlevel -> DOWNLEVEL expr
Rule 124   float -> FLOAT
Rule 125   yield -> YIELD
Rule 126   str -> STRING
Rule 127   element -> expr LBRACKET expr RBRACKET
Rule 128   var -> WORD
Rule 129   member -> var
Rule 130   member -> member DOT var
Rule 131   variables -> VARIABLES expr
Rule 132   pass -> PASS
Rule 133   alg0 -> alg0 PLUSMINUS alg1
Rule 134   alg0 -> PLUSMINUS alg1
Rule 135   alg0 -> alg1
Rule 136   alg1 -> alg1 DIVMUL alg2
Rule 137   alg1 -> alg2
Rule 138   alg2 -> alg2 DPROD alg3
Rule 139   alg2 -> alg3
Rule 140   alg3 -> expralg

Terminals, with rules where they appear

AMPERSAND            : 41
AND                  : 48
APPEND               : 
APPLICATION          : 49
AT                   : 35 36
BINNUMBER            : 
BOOLOP               : 121
BREAK                : 39
COLON                : 17
COMMA                : 16 45 46
DECODE               : 54
DEFINE               : 24 25
DIRPATH              : 57
DIVIDER              : 22
DIVMUL               : 136
DOT                  : 130
DOUBLECOLON          : 
DOWNLEVEL            : 123
DPROD                : 138
ELSE                 : 19 21
EQUALS               : 25 47
EVALTREE             : 117
EVALVAR              : 115
EXECFILE             : 114
FILENAME             : 58
FLOAT                : 124
FN                   : 9 10
HEXNUMBER            : 
IF                   : 18 19
INPUT                : 23
ISDIR                : 50
ISEXIST              : 52
LBRACE               : 1 11 12
LBRACKET             : 13 14 127
LENGTH               : 122
LISTDIR              : 53
LOOP                 : 37
LPAREN               : 9 10 18 19 20 21 26 27 28 29 37 38 50 51 52 53 54 55 56 57 58 115 116 117 118 120 122
MAKESYSTEM           : 59
MILLIS               : 38
MODULE               : 8
MPROD                : 
NEWLINE              : 
NODE                 : 120
NONE                 : 40
NOT                  : 
NUMBER               : 112
OR                   : 
PASS                 : 132
PLUSMINUS            : 133 134
PRINT                : 6
PRINTL               : 7
PYTHON               : 113
QUESTION             : 
RBRACE               : 1 11 12
RBRACKET             : 13 14 127
REGEX                : 55
RELPATH              : 56
RETURN               : 105
RPAREN               : 9 10 18 19 20 21 26 27 28 29 37 38 50 51 52 53 54 55 56 57 58 115 116 117 118 120 122
SEMI                 : 
SLICE                : 118
STRING               : 126
SUBST                : 119
SYSTEM               : 51
UNLESS               : 20 21
UNVAR                : 116
VARIABLES            : 131
WORD                 : 8 49 128
WRONGSTRING          : 
YIELD                : 125
error                : 

Nonterminals, with rules where they appear

Node                 : 83
None                 : 95
alg0                 : 63 121 121 133
alg1                 : 133 134 135 136
alg2                 : 136 137 138
alg3                 : 138 139
and                  : 80
application          : 33
args                 : 9 10 26 27 28 29 55 118 120
block                : 8 9 10 26 28 49 102
boolop               : 61
break                : 69
comms                : 10 13 43 45 46
declare              : 15 16
declares             : 11 16
decode               : 79
define               : 76
dict                 : 82
dirpath              : 98
divider              : 3 4 5
downlevel            : 34
element              : 88
equal                : 70
evaltree             : 90
evalvar              : 91
execfile             : 68
expr                 : 6 7 17 17 18 18 19 19 19 20 20 21 21 21 25 30 37 44 45 47 47 48 48 50 51 52 53 54 105 114 115 116 117 119 122 123 127 127 131
expralg              : 60 140
filename             : 97
float                : 107
fn                   : 31
if                   : 71
inblock              : 1 3 4 5 0
input                : 85
int                  : 108
invoke               : 87
isdir                : 99
isexist              : 101
length               : 103
list                 : 104
listdir              : 94
loop                 : 65
makesystem           : 77
member               : 28 29 111 130
metaexpr             : 2 3 41
millis               : 89
module               : 32
parttree             : 62
pass                 : 75
print                : 64
printl               : 78
python               : 67
regex                : 81
relpath              : 96
return               : 84
slice                : 93
str                  : 106 113
subst                : 73
system               : 100
term                 : 86
undervar             : 35 110
unless               : 72
unvar                : 92
var                  : 9 10 24 25 26 27 36 109 129 130
variables            : 66
yield                : 74

Parsing method: LALR

state 0

    (0) S' -> . inblock
    (2) inblock -> . metaexpr
    (3) inblock -> . inblock divider metaexpr
    (4) inblock -> . divider inblock
    (5) inblock -> . inblock divider
    (30) metaexpr -> . expr
    (31) metaexpr -> . fn
    (32) metaexpr -> . module
    (33) metaexpr -> . application
    (34) metaexpr -> . downlevel
    (22) divider -> . DIVIDER
    (60) expr -> . expralg
    (61) expr -> . boolop
    (62) expr -> . parttree
    (63) expr -> . alg0
    (64) expr -> . print
    (65) expr -> . loop
    (66) expr -> . variables
    (67) expr -> . python
    (68) expr -> . execfile
    (69) expr -> . break
    (70) expr -> . equal
    (71) expr -> . if
    (72) expr -> . unless
    (73) expr -> . subst
    (74) expr -> . yield
    (75) expr -> . pass
    (76) expr -> . define
    (77) expr -> . makesystem
    (78) expr -> . printl
    (79) expr -> . decode
    (80) expr -> . and
    (81) expr -> . regex
    (82) expr -> . dict
    (83) expr -> . Node
    (84) expr -> . return
    (85) expr -> . input
    (9) fn -> . FN var LPAREN args RPAREN block
    (10) fn -> . FN var LPAREN args RPAREN comms block
    (8) module -> . MODULE WORD block
    (49) application -> . APPLICATION WORD block
    (123) downlevel -> . DOWNLEVEL expr
    (86) expralg -> . term
    (87) expralg -> . invoke
    (88) expralg -> . element
    (89) expralg -> . millis
    (90) expralg -> . evaltree
    (91) expralg -> . evalvar
    (92) expralg -> . unvar
    (93) expralg -> . slice
    (94) expralg -> . listdir
    (95) expralg -> . None
    (96) expralg -> . relpath
    (97) expralg -> . filename
    (98) expralg -> . dirpath
    (99) expralg -> . isdir
    (100) expralg -> . system
    (101) expralg -> . isexist
    (102) expralg -> . block
    (103) expralg -> . length
    (104) expralg -> . list
    (121) boolop -> . alg0 BOOLOP alg0
    (41) parttree -> . AMPERSAND metaexpr
    (133) alg0 -> . alg0 PLUSMINUS alg1
    (134) alg0 -> . PLUSMINUS alg1
    (135) alg0 -> . alg1
    (6) print -> . PRINT expr
    (37) loop -> . LOOP LPAREN RPAREN expr
    (131) variables -> . VARIABLES expr
    (113) python -> . PYTHON str
    (114) execfile -> . EXECFILE expr
    (39) break -> . BREAK
    (47) equal -> . expr EQUALS expr
    (18) if -> . IF LPAREN expr RPAREN expr
    (19) if -> . IF LPAREN expr RPAREN expr ELSE expr
    (20) unless -> . UNLESS LPAREN expr RPAREN expr
    (21) unless -> . UNLESS LPAREN expr RPAREN expr ELSE expr
    (119) subst -> . SUBST expr
    (125) yield -> . YIELD
    (132) pass -> . PASS
    (24) define -> . DEFINE var
    (25) define -> . DEFINE var EQUALS expr
    (59) makesystem -> . MAKESYSTEM
    (7) printl -> . PRINTL expr
    (54) decode -> . DECODE LPAREN expr RPAREN
    (48) and -> . expr AND expr
    (55) regex -> . REGEX LPAREN args RPAREN
    (11) dict -> . LBRACE declares RBRACE
    (12) dict -> . LBRACE RBRACE
    (120) Node -> . NODE LPAREN args RPAREN
    (105) return -> . RETURN expr
    (23) input -> . INPUT
    (106) term -> . str
    (107) term -> . float
    (108) term -> . int
    (109) term -> . var
    (110) term -> . undervar
    (111) term -> . member
    (26) invoke -> . var LPAREN args RPAREN block
    (27) invoke -> . var LPAREN args RPAREN
    (28) invoke -> . member LPAREN args RPAREN block
    (29) invoke -> . member LPAREN args RPAREN
    (127) element -> . expr LBRACKET expr RBRACKET
    (38) millis -> . MILLIS LPAREN RPAREN
    (117) evaltree -> . EVALTREE LPAREN expr RPAREN
    (115) evalvar -> . EVALVAR LPAREN expr RPAREN
    (116) unvar -> . UNVAR LPAREN expr RPAREN
    (118) slice -> . SLICE LPAREN args RPAREN
    (53) listdir -> . LISTDIR LPAREN expr RPAREN
    (40) None -> . NONE
    (56) relpath -> . RELPATH LPAREN RPAREN
    (58) filename -> . FILENAME LPAREN RPAREN
    (57) dirpath -> . DIRPATH LPAREN RPAREN
    (50) isdir -> . ISDIR LPAREN expr RPAREN
    (51) system -> . SYSTEM LPAREN expr RPAREN
    (52) isexist -> . ISEXIST LPAREN expr RPAREN
    (1) block -> . LBRACE inblock RBRACE
    (122) length -> . LENGTH LPAREN expr RPAREN
    (13) list -> . LBRACKET comms RBRACKET
    (14) list -> . LBRACKET RBRACKET
    (136) alg1 -> . alg1 DIVMUL alg2
    (137) alg1 -> . alg2
    (126) str -> . STRING
    (124) float -> . FLOAT
    (112) int -> . NUMBER
    (128) var -> . WORD
    (35) undervar -> . AT undervar
    (36) undervar -> . AT var
    (129) member -> . var
    (130) member -> . member DOT var
    (138) alg2 -> . alg2 DPROD alg3
    (139) alg2 -> . alg3
    (140) alg3 -> . expralg

    DIVIDER         shift and go to state 63
    FN              shift and go to state 89
    MODULE          shift and go to state 16
    APPLICATION     shift and go to state 91
    DOWNLEVEL       shift and go to state 105
    AMPERSAND       shift and go to state 84
    PLUSMINUS       shift and go to state 73
    PRINT           shift and go to state 96
    LOOP            shift and go to state 76
    VARIABLES       shift and go to state 70
    PYTHON          shift and go to state 33
    EXECFILE        shift and go to state 75
    BREAK           shift and go to state 87
    IF              shift and go to state 23
    UNLESS          shift and go to state 109
    SUBST           shift and go to state 102
    YIELD           shift and go to state 68
    PASS            shift and go to state 24
    DEFINE          shift and go to state 88
    MAKESYSTEM      shift and go to state 5
    PRINTL          shift and go to state 106
    DECODE          shift and go to state 71
    REGEX           shift and go to state 60
    LBRACE          shift and go to state 97
    NODE            shift and go to state 104
    RETURN          shift and go to state 66
    INPUT           shift and go to state 53
    MILLIS          shift and go to state 85
    EVALTREE        shift and go to state 9
    EVALVAR         shift and go to state 26
    UNVAR           shift and go to state 98
    SLICE           shift and go to state 22
    LISTDIR         shift and go to state 48
    NONE            shift and go to state 6
    RELPATH         shift and go to state 101
    FILENAME        shift and go to state 58
    DIRPATH         shift and go to state 11
    ISDIR           shift and go to state 17
    SYSTEM          shift and go to state 80
    ISEXIST         shift and go to state 32
    LENGTH          shift and go to state 10
    LBRACKET        shift and go to state 95
    STRING          shift and go to state 86
    FLOAT           shift and go to state 62
    NUMBER          shift and go to state 7
    WORD            shift and go to state 20
    AT              shift and go to state 43

    application                    shift and go to state 1
    listdir                        shift and go to state 25
    execfile                       shift and go to state 56
    system                         shift and go to state 2
    unvar                          shift and go to state 59
    list                           shift and go to state 30
    Node                           shift and go to state 3
    alg2                           shift and go to state 92
    subst                          shift and go to state 61
    int                            shift and go to state 4
    variables                      shift and go to state 64
    return                         shift and go to state 65
    undervar                       shift and go to state 14
    inblock                        shift and go to state 69
    member                         shift and go to state 55
    unless                         shift and go to state 72
    filename                       shift and go to state 12
    millis                         shift and go to state 13
    invoke                         shift and go to state 74
    float                          shift and go to state 21
    print                          shift and go to state 93
    and                            shift and go to state 18
    term                           shift and go to state 77
    metaexpr                       shift and go to state 19
    parttree                       shift and go to state 78
    block                          shift and go to state 79
    length                         shift and go to state 50
    define                         shift and go to state 81
    element                        shift and go to state 54
    divider                        shift and go to state 82
    boolop                         shift and go to state 83
    relpath                        shift and go to state 27
    pass                           shift and go to state 28
    dirpath                        shift and go to state 29
    slice                          shift and go to state 90
    makesystem                     shift and go to state 31
    equal                          shift and go to state 34
    alg0                           shift and go to state 35
    None                           shift and go to state 36
    python                         shift and go to state 37
    expralg                        shift and go to state 38
    isdir                          shift and go to state 39
    regex                          shift and go to state 40
    alg1                           shift and go to state 41
    evalvar                        shift and go to state 94
    loop                           shift and go to state 107
    dict                           shift and go to state 44
    alg3                           shift and go to state 42
    expr                           shift and go to state 103
    break                          shift and go to state 99
    if                             shift and go to state 100
    isexist                        shift and go to state 15
    printl                         shift and go to state 52
    yield                          shift and go to state 45
    evaltree                       shift and go to state 46
    str                            shift and go to state 47
    fn                             shift and go to state 8
    decode                         shift and go to state 49
    downlevel                      shift and go to state 57
    input                          shift and go to state 51
    var                            shift and go to state 108
    module                         shift and go to state 67

state 1

    (33) metaexpr -> application .

    RBRACE          reduce using rule 33 (metaexpr -> application .)
    DIVIDER         reduce using rule 33 (metaexpr -> application .)
    EQUALS          reduce using rule 33 (metaexpr -> application .)
    AND             reduce using rule 33 (metaexpr -> application .)
    LBRACKET        reduce using rule 33 (metaexpr -> application .)
    $end            reduce using rule 33 (metaexpr -> application .)
    RBRACKET        reduce using rule 33 (metaexpr -> application .)
    COMMA           reduce using rule 33 (metaexpr -> application .)
    COLON           reduce using rule 33 (metaexpr -> application .)
    RPAREN          reduce using rule 33 (metaexpr -> application .)
    LBRACE          reduce using rule 33 (metaexpr -> application .)
    ELSE            reduce using rule 33 (metaexpr -> application .)


state 2

    (100) expralg -> system .

    EQUALS          reduce using rule 100 (expralg -> system .)
    AND             reduce using rule 100 (expralg -> system .)
    LBRACKET        reduce using rule 100 (expralg -> system .)
    DIVIDER         reduce using rule 100 (expralg -> system .)
    $end            reduce using rule 100 (expralg -> system .)
    RBRACE          reduce using rule 100 (expralg -> system .)
    RBRACKET        reduce using rule 100 (expralg -> system .)
    COMMA           reduce using rule 100 (expralg -> system .)
    COLON           reduce using rule 100 (expralg -> system .)
    RPAREN          reduce using rule 100 (expralg -> system .)
    LBRACE          reduce using rule 100 (expralg -> system .)
    ELSE            reduce using rule 100 (expralg -> system .)
    DPROD           reduce using rule 100 (expralg -> system .)
    DIVMUL          reduce using rule 100 (expralg -> system .)
    BOOLOP          reduce using rule 100 (expralg -> system .)
    PLUSMINUS       reduce using rule 100 (expralg -> system .)


state 3

    (83) expr -> Node .

    RPAREN          reduce using rule 83 (expr -> Node .)
    EQUALS          reduce using rule 83 (expr -> Node .)
    AND             reduce using rule 83 (expr -> Node .)
    LBRACKET        reduce using rule 83 (expr -> Node .)
    DIVIDER         reduce using rule 83 (expr -> Node .)
    $end            reduce using rule 83 (expr -> Node .)
    RBRACE          reduce using rule 83 (expr -> Node .)
    RBRACKET        reduce using rule 83 (expr -> Node .)
    COMMA           reduce using rule 83 (expr -> Node .)
    COLON           reduce using rule 83 (expr -> Node .)
    LBRACE          reduce using rule 83 (expr -> Node .)
    ELSE            reduce using rule 83 (expr -> Node .)


state 4

    (108) term -> int .

    RPAREN          reduce using rule 108 (term -> int .)
    EQUALS          reduce using rule 108 (term -> int .)
    AND             reduce using rule 108 (term -> int .)
    LBRACKET        reduce using rule 108 (term -> int .)
    DPROD           reduce using rule 108 (term -> int .)
    DIVMUL          reduce using rule 108 (term -> int .)
    BOOLOP          reduce using rule 108 (term -> int .)
    PLUSMINUS       reduce using rule 108 (term -> int .)
    RBRACKET        reduce using rule 108 (term -> int .)
    COMMA           reduce using rule 108 (term -> int .)
    DIVIDER         reduce using rule 108 (term -> int .)
    $end            reduce using rule 108 (term -> int .)
    RBRACE          reduce using rule 108 (term -> int .)
    COLON           reduce using rule 108 (term -> int .)
    LBRACE          reduce using rule 108 (term -> int .)
    ELSE            reduce using rule 108 (term -> int .)


state 5

    (59) makesystem -> MAKESYSTEM .

    EQUALS          reduce using rule 59 (makesystem -> MAKESYSTEM .)
    AND             reduce using rule 59 (makesystem -> MAKESYSTEM .)
    LBRACKET        reduce using rule 59 (makesystem -> MAKESYSTEM .)
    DIVIDER         reduce using rule 59 (makesystem -> MAKESYSTEM .)
    $end            reduce using rule 59 (makesystem -> MAKESYSTEM .)
    RBRACE          reduce using rule 59 (makesystem -> MAKESYSTEM .)
    RBRACKET        reduce using rule 59 (makesystem -> MAKESYSTEM .)
    COMMA           reduce using rule 59 (makesystem -> MAKESYSTEM .)
    COLON           reduce using rule 59 (makesystem -> MAKESYSTEM .)
    RPAREN          reduce using rule 59 (makesystem -> MAKESYSTEM .)
    LBRACE          reduce using rule 59 (makesystem -> MAKESYSTEM .)
    ELSE            reduce using rule 59 (makesystem -> MAKESYSTEM .)


state 6

    (40) None -> NONE .

    EQUALS          reduce using rule 40 (None -> NONE .)
    AND             reduce using rule 40 (None -> NONE .)
    LBRACKET        reduce using rule 40 (None -> NONE .)
    RBRACKET        reduce using rule 40 (None -> NONE .)
    COMMA           reduce using rule 40 (None -> NONE .)
    DPROD           reduce using rule 40 (None -> NONE .)
    DIVMUL          reduce using rule 40 (None -> NONE .)
    BOOLOP          reduce using rule 40 (None -> NONE .)
    PLUSMINUS       reduce using rule 40 (None -> NONE .)
    DIVIDER         reduce using rule 40 (None -> NONE .)
    $end            reduce using rule 40 (None -> NONE .)
    RBRACE          reduce using rule 40 (None -> NONE .)
    COLON           reduce using rule 40 (None -> NONE .)
    RPAREN          reduce using rule 40 (None -> NONE .)
    LBRACE          reduce using rule 40 (None -> NONE .)
    ELSE            reduce using rule 40 (None -> NONE .)


state 7

    (112) int -> NUMBER .

    DPROD           reduce using rule 112 (int -> NUMBER .)
    DIVMUL          reduce using rule 112 (int -> NUMBER .)
    BOOLOP          reduce using rule 112 (int -> NUMBER .)
    PLUSMINUS       reduce using rule 112 (int -> NUMBER .)
    EQUALS          reduce using rule 112 (int -> NUMBER .)
    AND             reduce using rule 112 (int -> NUMBER .)
    LBRACKET        reduce using rule 112 (int -> NUMBER .)
    DIVIDER         reduce using rule 112 (int -> NUMBER .)
    $end            reduce using rule 112 (int -> NUMBER .)
    RBRACE          reduce using rule 112 (int -> NUMBER .)
    RBRACKET        reduce using rule 112 (int -> NUMBER .)
    COMMA           reduce using rule 112 (int -> NUMBER .)
    COLON           reduce using rule 112 (int -> NUMBER .)
    RPAREN          reduce using rule 112 (int -> NUMBER .)
    LBRACE          reduce using rule 112 (int -> NUMBER .)
    ELSE            reduce using rule 112 (int -> NUMBER .)


state 8

    (31) metaexpr -> fn .

    RBRACE          reduce using rule 31 (metaexpr -> fn .)
    DIVIDER         reduce using rule 31 (metaexpr -> fn .)
    EQUALS          reduce using rule 31 (metaexpr -> fn .)
    AND             reduce using rule 31 (metaexpr -> fn .)
    LBRACKET        reduce using rule 31 (metaexpr -> fn .)
    $end            reduce using rule 31 (metaexpr -> fn .)
    RBRACKET        reduce using rule 31 (metaexpr -> fn .)
    COMMA           reduce using rule 31 (metaexpr -> fn .)
    COLON           reduce using rule 31 (metaexpr -> fn .)
    RPAREN          reduce using rule 31 (metaexpr -> fn .)
    LBRACE          reduce using rule 31 (metaexpr -> fn .)
    ELSE            reduce using rule 31 (metaexpr -> fn .)


state 9

    (117) evaltree -> EVALTREE . LPAREN expr RPAREN

    LPAREN          shift and go to state 110


state 10

    (122) length -> LENGTH . LPAREN expr RPAREN

    LPAREN          shift and go to state 111


state 11

    (57) dirpath -> DIRPATH . LPAREN RPAREN

    LPAREN          shift and go to state 112


state 12

    (97) expralg -> filename .

    EQUALS          reduce using rule 97 (expralg -> filename .)
    AND             reduce using rule 97 (expralg -> filename .)
    LBRACKET        reduce using rule 97 (expralg -> filename .)
    DIVIDER         reduce using rule 97 (expralg -> filename .)
    $end            reduce using rule 97 (expralg -> filename .)
    RBRACE          reduce using rule 97 (expralg -> filename .)
    RBRACKET        reduce using rule 97 (expralg -> filename .)
    COMMA           reduce using rule 97 (expralg -> filename .)
    COLON           reduce using rule 97 (expralg -> filename .)
    RPAREN          reduce using rule 97 (expralg -> filename .)
    LBRACE          reduce using rule 97 (expralg -> filename .)
    ELSE            reduce using rule 97 (expralg -> filename .)
    DPROD           reduce using rule 97 (expralg -> filename .)
    DIVMUL          reduce using rule 97 (expralg -> filename .)
    BOOLOP          reduce using rule 97 (expralg -> filename .)
    PLUSMINUS       reduce using rule 97 (expralg -> filename .)


state 13

    (89) expralg -> millis .

    EQUALS          reduce using rule 89 (expralg -> millis .)
    AND             reduce using rule 89 (expralg -> millis .)
    LBRACKET        reduce using rule 89 (expralg -> millis .)
    DIVIDER         reduce using rule 89 (expralg -> millis .)
    $end            reduce using rule 89 (expralg -> millis .)
    RBRACE          reduce using rule 89 (expralg -> millis .)
    RBRACKET        reduce using rule 89 (expralg -> millis .)
    COMMA           reduce using rule 89 (expralg -> millis .)
    COLON           reduce using rule 89 (expralg -> millis .)
    RPAREN          reduce using rule 89 (expralg -> millis .)
    LBRACE          reduce using rule 89 (expralg -> millis .)
    ELSE            reduce using rule 89 (expralg -> millis .)
    DPROD           reduce using rule 89 (expralg -> millis .)
    DIVMUL          reduce using rule 89 (expralg -> millis .)
    BOOLOP          reduce using rule 89 (expralg -> millis .)
    PLUSMINUS       reduce using rule 89 (expralg -> millis .)


state 14

    (110) term -> undervar .

    RPAREN          reduce using rule 110 (term -> undervar .)
    EQUALS          reduce using rule 110 (term -> undervar .)
    AND             reduce using rule 110 (term -> undervar .)
    LBRACKET        reduce using rule 110 (term -> undervar .)
    DPROD           reduce using rule 110 (term -> undervar .)
    DIVMUL          reduce using rule 110 (term -> undervar .)
    BOOLOP          reduce using rule 110 (term -> undervar .)
    PLUSMINUS       reduce using rule 110 (term -> undervar .)
    RBRACKET        reduce using rule 110 (term -> undervar .)
    COMMA           reduce using rule 110 (term -> undervar .)
    DIVIDER         reduce using rule 110 (term -> undervar .)
    $end            reduce using rule 110 (term -> undervar .)
    RBRACE          reduce using rule 110 (term -> undervar .)
    COLON           reduce using rule 110 (term -> undervar .)
    LBRACE          reduce using rule 110 (term -> undervar .)
    ELSE            reduce using rule 110 (term -> undervar .)


state 15

    (101) expralg -> isexist .

    EQUALS          reduce using rule 101 (expralg -> isexist .)
    AND             reduce using rule 101 (expralg -> isexist .)
    LBRACKET        reduce using rule 101 (expralg -> isexist .)
    DIVIDER         reduce using rule 101 (expralg -> isexist .)
    $end            reduce using rule 101 (expralg -> isexist .)
    RBRACE          reduce using rule 101 (expralg -> isexist .)
    RBRACKET        reduce using rule 101 (expralg -> isexist .)
    COMMA           reduce using rule 101 (expralg -> isexist .)
    COLON           reduce using rule 101 (expralg -> isexist .)
    RPAREN          reduce using rule 101 (expralg -> isexist .)
    LBRACE          reduce using rule 101 (expralg -> isexist .)
    ELSE            reduce using rule 101 (expralg -> isexist .)
    DPROD           reduce using rule 101 (expralg -> isexist .)
    DIVMUL          reduce using rule 101 (expralg -> isexist .)
    BOOLOP          reduce using rule 101 (expralg -> isexist .)
    PLUSMINUS       reduce using rule 101 (expralg -> isexist .)


state 16

    (8) module -> MODULE . WORD block

    WORD            shift and go to state 113


state 17

    (50) isdir -> ISDIR . LPAREN expr RPAREN

    LPAREN          shift and go to state 114


state 18

    (80) expr -> and .

    RPAREN          reduce using rule 80 (expr -> and .)
    EQUALS          reduce using rule 80 (expr -> and .)
    AND             reduce using rule 80 (expr -> and .)
    LBRACKET        reduce using rule 80 (expr -> and .)
    DIVIDER         reduce using rule 80 (expr -> and .)
    $end            reduce using rule 80 (expr -> and .)
    RBRACE          reduce using rule 80 (expr -> and .)
    RBRACKET        reduce using rule 80 (expr -> and .)
    COMMA           reduce using rule 80 (expr -> and .)
    COLON           reduce using rule 80 (expr -> and .)
    LBRACE          reduce using rule 80 (expr -> and .)
    ELSE            reduce using rule 80 (expr -> and .)


state 19

    (2) inblock -> metaexpr .

    DIVIDER         reduce using rule 2 (inblock -> metaexpr .)
    $end            reduce using rule 2 (inblock -> metaexpr .)
    RBRACE          reduce using rule 2 (inblock -> metaexpr .)


state 20

    (128) var -> WORD .

    LPAREN          reduce using rule 128 (var -> WORD .)
    EQUALS          reduce using rule 128 (var -> WORD .)
    AND             reduce using rule 128 (var -> WORD .)
    LBRACKET        reduce using rule 128 (var -> WORD .)
    DIVIDER         reduce using rule 128 (var -> WORD .)
    $end            reduce using rule 128 (var -> WORD .)
    RBRACE          reduce using rule 128 (var -> WORD .)
    RBRACKET        reduce using rule 128 (var -> WORD .)
    COMMA           reduce using rule 128 (var -> WORD .)
    COLON           reduce using rule 128 (var -> WORD .)
    RPAREN          reduce using rule 128 (var -> WORD .)
    LBRACE          reduce using rule 128 (var -> WORD .)
    ELSE            reduce using rule 128 (var -> WORD .)
    DPROD           reduce using rule 128 (var -> WORD .)
    DIVMUL          reduce using rule 128 (var -> WORD .)
    BOOLOP          reduce using rule 128 (var -> WORD .)
    PLUSMINUS       reduce using rule 128 (var -> WORD .)
    DOT             reduce using rule 128 (var -> WORD .)


state 21

    (107) term -> float .
